--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,10 @@ Description: Simple tools for workflow in Ops Insights.
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Imports: 
-    purrr
+    purrr,
+    dplyr,
+    magrittr
 URL: https://github.com/mattsq/qOpsTools
 BugReports: https://github.com/mattsq/qOpsTools/issues
